threaded workers with queues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\jacob.SHAKED\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "C:\\Users\\jacob.SHAKED\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "editor.fontSize": 18
 }
