--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,7 @@
                 "FLASK_ENV": "development",
                 "FLASK_DEBUG": "0"
             },
+            // "justMyCode": false,
             "args": [
                 "run",
                 "--no-debugger",
