function define last updated

--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -5,11 +5,29 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Flask",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: Flask",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "Source/app.py",
+                "FLASK_ENV": "development",
+                "FLASK_DEBUG": "0"
+            },
+            // "justMyCode": false,
+            "args": [
+                "run",
+                // "--no-debugger",
+                "--no-reload"
+            ],
+            "jinja": true
         }
     ]
 }
