--- a/Source/.vscode/launch.json
+++ b/Source/.vscode/launch.json
@@ -24,7 +24,7 @@
             // "justMyCode": false,
             "args": [
                 "run",
-                // "--no-debugger",
+                "--no-debugger",
                 "--no-reload"
             ],
             "jinja": true
