--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.fontSize": 18
+    "editor.fontSize": 18,
+    "python.pythonPath": "C:\\Users\\Ilan\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
