complex net json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "editor.fontSize": 18,
-    "python.pythonPath": "C:\\Users\\Ilan\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "editor.fontSize": 18
 }
